Start degradation section

--- a/assessment-form.html
+++ b/assessment-form.html
@@ -250,6 +250,37 @@
 
 <h3>V. Sources of Degradation</h3>
 
+Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
+
+<label>Crop Related Sources[radio crop-related-sources id:crop-related-sources use_label_element "S" "M" "H"]</label>
+<label>Grazing Related SourcesIntensive Animal Feeding Operations[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Highway / Road / Bridge Maintenance and Runoff[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Channelization[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Dredging[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Removal of Riparian VegetationBank and Shoreline Erosion / Modification / Destruction[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Flow Regulation / Modification (Hydrology)[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Land Fill[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Urban Runoff[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Impoundment - Dam (natural or man-mad)[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Construction: Highway, Road, Bridge, Culvert[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Construction: Land Development[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Natural Sources (i.e. log jams)[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Signs of animals using or crossing the stream[radio  id: use_label_element "S" "M" "H"]</label>
+<label>On-site Wastewater Systems[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Silviculture (Forestry)[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Resource Extraction (Mining)[radio  id: use_label_element "S" "M" "H"]</label>
+<label>Recreational / Tourism Activities (general)[radio  id: use_label_element "S" "M" "H"]</label>
+<label> - Golf Courses[radio  id: use_label_element "S" "M" "H"]</label>
+<label> - Recreational Boating (water releases)[radio  id: use_label_element "S" "M" "H"]</label>
+<label> - Recreational Boating (bank or shoreline erosion)[radio recreational-boating-bank-erosion id:recreational-boating-bank-erosion use_label_element "S" "M" "H"]</label>
+<label>Debris in Water[radio debris-in-water id:debris-in-water use_label_element "S" "M" "H"]</label>
+<label>Debris in Trees (natural sources)[radio debris-in-trees-natural-sources id:debris-in-trees-natural-sources use_label_element "S" "M" "H"]</label>
+<label>Trash in trees along bank[radio trash-in-trees-along-bank id:trash-in-trees-along-bank use_label_element "S" "M" "H"]</label>
+<label>Industrial Point Sources[radio industrial-point-sources id:industrial-point-sources use_label_element "S" "M" "H"]</label>
+<label>Municipal Point Sources[radio municipal-point-sources id:municipal-point-sources use_label_element "S" "M" "H"]</label>
+<label>Source(s) Unknown[radio source-unknown id:source-unknown use_label_element "S" "M" "H"]</label>
+
+
 <h3>Identification and Assesment</h3>
 <p>Please use the letter codes "R" (rare) for 1 to 10 and "C" (common) for 11 or more.</p>
 
