--- a/assessment-form.html
+++ b/assessment-form.html
@@ -4,22 +4,16 @@
 [select* site_name include_blank "Brent Run Creek" "Brent Run Headwaters" "Butternut Creek Headwaters" "Butternut Creek" "Evergreen Creek" "Farmers Creek" "Flint River Flushing" "Flint River Richfield" "Flint River South" "Flint River, Northbranch" "Gilkey Creek Headwaters" "Gilkey Creek" "Hasler Creek Headwaters" "Hasler Creek" "Hunters Creek" "Indian Creek" "Kearsley Creek Headwaters" "Kearsley Creek" "Misteguay Creek Headwaters" "Misteguay Creek" "Pine Run Creek" "Pine Run Headwaters" "Plum Creek" "Shiawasee River Argentine" "Shiawasee River Linden" "Silver Creek" "Springbank Creek" "Squaw Creek" "Swartz Creek Headwaters" "Swartz Creek" "Thread Creek Headwaters" "Thread Creek"]
 
 <label>Collection Start Time</label>
-[text* text-403 5/4 id:start-time placeholder "8:20"][radio radio-49 "AM" "PM"]
+[text assessment_start 5/4 id:start-time placeholder "8:20"][radio assesment_start_am_pm "AM" "PM"]
 
 <label>Collection End Time</label>
-[text* text-699 5/4 id:end-time placeholder "9:35"][radio radio-46 "AM" "PM"]
+[text assessment_end 5/4 id:end-time placeholder "9:35"][radio assessment_end_am_pm "AM" "PM"]
 
 <label>Date</label>
 [date* assessment_date]
 
 <label>HUC Code (if known)</label>
-[select menu-656 id:huc-code "Please Choose One" "HUC-2 (Region)" "HUC-4 (Sub-region)" "HUC-6 (Basin)" "HUC-8 (Sub-basin)" "HUC-10 (Watershed)" "HUC-12 (Sub-watershed)"]
-
-<label>Latitude</label>
-[number lat_degrees id:latitude min:42 max:44 placeholder "Degrees"][number lat_minutes id:latitude-minutes placeholder "Minutes"][number lat_seconds id:latitude-seconds placeholder "Seconds"] <strong>N</strong>
-
-<label>Longitude</label>
-[number lng_degrees id:longitude min:-84 max:-82][number lng_minutes id:longitude-minutes][number lng_seconds id:longitude-seconds] <strong>W</strong>
+[select huc_code id:huc-code "Please Choose One" "HUC-2 (Region)" "HUC-4 (Sub-region)" "HUC-6 (Basin)" "HUC-8 (Sub-basin)" "HUC-10 (Watershed)" "HUC-12 (Sub-watershed)"]
 
 <h3>Monitoring Team</h3>
 <label>Name(s) of person(s) completing datasheet</label>
@@ -33,7 +27,7 @@
 
 <h3>Macroinvertebrae Collection:</h3><label>Check the habitats that were sampled. make sure you are sampling <em>all</em> habitats present (within a 300 foot sampling reach as described in your site directions).
 
-[checkbox macroinvertebrae_collection id:macroinvertebrae-collection use_label_element "Riffles" "Overhanging Vegetation" "Rooted Aquatic Plants" "Runs" "Undercut banks" "Large Rocks" "Leaf Packs" "Pools" "Eddies" "Submerged Wood/Woody debris" "Other"][text* other_macroinvertebrae_collection 50/]
+[checkbox macroinvertebrae_collection id:macroinvertebrae-collection use_label_element "Riffles" "Overhanging Vegetation" "Rooted Aquatic Plants" "Runs" "Undercut banks" "Large Rocks" "Leaf Packs" "Pools" "Eddies" "Submerged Wood/Woody debris" "Other"][text other_macroinvertebrae_collection 50/]
 
 <label>Did you see any</label>
 [checkbox live_clams_crayfish id:live-crayfish use_label_element "Live Crayfish" "Live Clams"]
@@ -56,7 +50,7 @@
 [number* average_depth id:avg-depth]
 
 <label>Average Flow (in seconds)</label>
-[number* average_flow id:avg-flow min:0]
+[number average_flow id:avg-flow min:0]
 
 <h3>III. Bank Conditions</h3>
 
@@ -137,13 +131,13 @@
 [radio foam-if-yes id:foam-if-yes use_label_element "Gritty (most likely natural)" "Slippery (most likely artificial)"]
 
 <label>If the water <strong>smells</strong>, please describe</label>
-[text* water-smell 40/ id:water-smell]
+[text water-smell 40/ id:water-smell]
 
 <label>Has it rained in the past five (5) days?</label>
 [radio rained-yes-no id:rained-yes-no use_label_element "Yes" "No"]
 
 <label><strong>If yes</strong>, approximate the number of inches</label>
-[number* rain-inches id:rain-inches min:0]
+[number rain-inches id:rain-inches min:0]
 
 <h4>B. Plant Community</h4>
 
@@ -158,30 +152,30 @@
 <h4>Plants in Stream</h4>
 
 <label>Algae on Surfaces of Rocks or Plants</label>
-[select* algae-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select algae-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <label>Macrophytes (Standing Plants)</label>
-[select* macrophytes_abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select macrophytes_abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <label>Filamentous Algae (Streamers)</label>
-[select* filamentous_algae_abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select filamentous_algae_abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <label>Other</label>
-[select* other-plants-in-stream-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select other-plants-in-stream-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <h4>Plants on Bank and Riparian Zone</h4>
 
 <label>Shrubs</label>
-[select* shrubs-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select shrubs-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <label>Grasses</label>
-[select* grasses-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select grasses-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <label>Trees</label>
-[select* trees-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select trees-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <label>Other</label>
-[select* other-plants-on-bank-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
+[select other-plants-on-bank-abundance include_blank "Absent" "Rare" "Common" "Abundant" "Dominant"]
 
 <h4>C. Streambed Substrate</h4>
 
@@ -315,85 +309,85 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
 <p>Please use the letter codes "R" (rare) for 1 to 10 and "C" (common) for 11 or more.</p>
 
 <h4>Group 1: Sensitive</h4>
-<label>Caddisfly Larvae (Trichoptera)
-[text caddisfly-larvae 15/ id:caddisfly-larvae]</label>
+<label>Caddisfly Larvae (Trichoptera)</label>
+[select caddisfly_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Hellgrammites (Megaloptera)
-[text hellgrammites 15/ id:hellgrammites]</label>
+<label>Hellgrammites (Megaloptera)</label>
+[select hellgrammites_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Mayfly nymphs (Ephemeroptera)
-[text mayflys 15/ id:mayflys]</label>
+<label>Mayfly nymphs (Ephemeroptera)</label>
+[select mayfly_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Gilled (right-handed) snails (Gastropoda)
-[text gilled-snails 15/ id:gilled-snails]</label>
+<label>Gilled (right-handed) snails (Gastropoda)</label>
+[select gilled_snail_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Stonefly nymphs (Plecoptera)
-[text stonefly 15/ id:stonefly]</label>
+<label>Stonefly nymphs (Plecoptera)</label>
+[select stonefly_nymphs_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Water Penny (Coleoptera)
-[text waterpenny 15/ id:waterpenny]</label>
+<label>Water Penny (Coleoptera)</label>
+[select water_penny_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Water Snipe Fly (Diptera)
-[text watersnipefly 15/ id:watersnipefly]</label>
+<label>Water Snipe Fly (Diptera)</label>
+[select water_snipe_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
 
 <h4>Group 2: Somewhat Sensitive</h4>
 
-<label>Alderfly larvae (Megaloptera)
-[text alderfly 15/ id:alderfly]</label>
+<label>Alderfly larvae (Megaloptera)</label>
+[select alderfly_larvae_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Beetle adults (Coleoptera)
-[text beetle-adults 15/ id:beetle-adults]</label>
+<label>Beetle adults (Coleoptera)</label>
+[select beetle_adults_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Beetle larvae (Coleoptera)
-[text beetle-adults 15/ id:beetle-adults]</label>
+<label>Beetle larvae (Coleoptera)</label>
+[select beetle_larvae_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Black fly larvae (Diptera)
-[text blackfly 15/ id:blackfly]</label>
+<label>Black fly larvae (Diptera)</label>
+[select black_fly_larvae_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Clams (from count) (Pelecypoda)
-[text clams 15/ id:clams]</label>
+<label>Clams (from count) (Pelecypoda)</label>
+[select final_clams_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Crane fly larvae (Diptera)
-[text hellgrammites 15/ id:hellgrammites]</label>
+<label>Crane fly larvae (Diptera)</label>
+[select crane_flye_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Crayfish (from count) (Decapoda)
-[text crayfish 15/]</label>
+<label>Crayfish (from count) (Decapoda)</label>
+[select final_crayfish_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Damselfly nymphs (Odonata)
-[text damselfly 15/]</label>
+<label>Damselfly nymphs (Odonata)</label>
+[select damselfly_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Dragonfly nymphs (Odonata)
-[text dragonfly 15/]</label>
+<label>Dragonfly nymphs (Odonata)</label>
+[select dragonfly_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Net-spinning caddisfly larvae (Hydropsychidae and Trichoptera)
-[text caddisfly-larvae 15/]</label>
+<label>Net-spinning caddisfly larvae (Hydropsychidae and Trichoptera)</label>
+[select netSpinning_caddisfly_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Scuds (Amphipoda)
-[text scuds 15/]</label>
+<label>Scuds (Amphipoda)</label>
+[select scud_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Sowbugs (Isopoda)
-[text sowbugs 15/]</label>
+<label>Sowbugs (Isopoda)</label>
+[select sowbug_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
 <h4>Group 3: Tolerant</h4>
 
-<label>Aquatic worms (Oligochaeta)
-[text aquatic_worms 15/]</label>
+<label>Aquatic worms (Oligochaeta)</label>
+[select aqautic_worms_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Leeches (Hirudinea)
-[text leeches 15/]</label>
+<label>Leeches (Hirudinea)</label>
+[select leeches_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Midge larvae (Diptera)
-[text midge_larvae 15/]</label>
+<label>Midge larvae (Diptera)</label>
+[select midge_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Pouch Snails (Gastropoda)
-[text pouch_snails 15/]</label>
+<label>Pouch Snails (Gastropoda)</label>
+[select pouch_snails_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>True bugs (Hemiptera)
-[text true_bugs 15/]</label>
+<label>True bugs (Hemiptera)</label>
+[select tree_bugs_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
-<label>Other true flies (Diptera)
-[text other_true_flies 15/]</label>
+<label>Other true flies (Diptera)</label>
+[select true_flies_count include_blank "Rare (1 - 10)" "Common (11+)"]
 
 <h4>Stream Quality Score</h4>
 <h5>Group 1</h5>
@@ -420,16 +414,10 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
 <label>Identifications made by</label>
 [text* ids_made_by 50/]
 
-<label>Rate your confidence in these identifications (5 being most confident)</label>
-[radio confidence_in_score "5" "4" "3" "2" "1"]
-
 <label>Data sheet check for completeness by</label>
 [text* completeness_check 50/]
 
 <label>Data entered into MiCorps database by</label>
 [text micorps_database_entry 50/]
-
-<label>Date entered</label>
-[date entry_date]
 
 <p>[submit "Save assessment"]</p>
