--- a/visualization/map.html
+++ b/visualization/map.html
@@ -10,28 +10,18 @@
         <link rel="author" href="humans.txt">
     </head>
     <body>
-
-        <div class="well hide">
-    <h4>Filter Sites</h4>
-    <hr>
-    <label>Site</label>
-    <input type="text" id="filterText" class="form-control">
-    <label>Distance</label>
-        <select name="" id="distance" class="form-control" required="required">
-                <option value="0">All</option>
-                <option value="10">10 Miles</option>
-                 <option value="25">25 Miles</option>
-            <option value="50">50 Miles</option>
-            <option value="100">100 Miles</option>
-            </select>
-</div>
+        <div class="container">
+    <div class="well">
+     <h1 class="text-center">Flint River Watershed Sites</h1>
+ </div>
 <div class="row">
-<div class="col-xs-6 col-sm-6 col-md-4 col-lg-9">
+<div class="col-xs-6 col-sm-6 col-md-7 col-lg-8">
 <div id="map-canvas"></div>
 </div>
-<div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+<div class="col-xs-6 col-sm-6 col-md-5 col-lg-4">
 <h3>Sites</h3>
 <div class="list-group">
+</div>
 </div>
 </div>
 </div>
